# keel

./: .gitignore  README.md  pyproject.toml
.github/prompts/: contributing-design.prompt.md
.github/workflows/: ci.yml  publish.yml
docs/: releasing.md
examples/: basic_usage.py  smollm2_360m.py
keel/: __init__.py
keel/core/: __init__.py  dispatcher.py  engine.py  human_review.py  middleware.py  prompts.py  registry.py
keel/utils/: __init__.py  logging.py  parser.py
tests/: conftest.py  test_dispatcher.py  test_human_review.py  test_parser.py  test_registry.py
tests/chaos/: test_correction_loop.py
